Fix background stretch  - Fix background image stretching when resizing window

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,10 @@ body, html {
     box-sizing: border-box;
 }
 
+ul, li {
+    list-style: none;
+}
+
 #backgroundImageDiv {
     background: no-repeat center center fixed;
     display: block;
@@ -24,8 +28,10 @@ body, html {
 }
 
 #backgroundImage {
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .container {
